tests/ui/async-await/in-trait/lifetime-mismatch.stderr
error[E0195]: lifetime parameters or bounds on method `foo` do not match the trait declaration
  --> $DIR/lifetime-mismatch.rs:11:17
   |
LL |     async fn foo<'a>(&self);
   |                 ---- lifetimes in impl do not match this method in trait
...
LL |     async fn foo(&self) {}
   |                 ^ lifetimes do not match method in trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0195`.
